# quezz

./: README.md
backend/: package-lock.json  package.json  tsconfig.tsbuildinfo
backend-rust/: Cargo.toml
backend-rust/src/: main.rs
backend-rust/src/routers/: mod.rs  user_scope.rs  worker_scope.rs
backend/prisma/: schema.prisma
backend/prisma/migrations/20240520103916_init/: migration.sql
backend/prisma/migrations/20240523100511_removed_option_id/: migration.sql
backend/prisma/migrations/20240527161217_change_submission_amount_to_string/: migration.sql
backend/prisma/migrations/20240529122012_make_amount_number/: migration.sql
backend/prisma/migrations/20240529154648_add_payouts_and_trxn_status_to_workers/: migration.sql
backend/prisma/migrations/20240610134133_remove_done_from_task/: migration.sql
backend/prisma/migrations/20241007092550_add_total_submission_count/: migration.sql
backend/src/: config.ts  db.ts  index.ts  middleware.ts  privateKeys.ts  types.ts
backend/src/routers/: testing.ts  user.ts  worker.ts
user-frontend/: package-lock.json  package.json
user-frontend/app/(root)/: layout.tsx  page.tsx
user-frontend/components/: Appbar.tsx  FullMenu.tsx  Hero.tsx  MobMenu.tsx  SignInContext.tsx  TaskCard.tsx  Upload.tsx  UploadImage.tsx
user-frontend/utils/: index.ts
worker-frontend/: package-lock.json  package.json
worker-frontend/app/(root)/: layout.tsx  page.tsx
worker-frontend/components/: Appbar.tsx  FullMenu.tsx  MobMenu.tsx  NextTask.tsx  PayoutBtn.tsx  SignInContext.tsx
worker-frontend/utils/: index.ts
(+4 files in other folders)
