[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
jsonwebtoken = "9"
actix-cors = "0.7.0"
